@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2025-09-10T12:41:18Z",
+  "timestamp" : "2025-09-11T01:39:31Z",
   "count_outdated" : 9516,
   "uniques_outdated" : 4665,
-  "count" : 9632,
-  "uniques" : 4750,
+  "count" : 9633,
+  "uniques" : 4751,
   "clones" : [
     {
       "timestamp": "2025-08-28T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
+      "count_decinc": [ 1, 2 ],
+      "uniques": 1,
       "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2025-08-29T00:00:00Z",
@@ -124,12 +124,12 @@
     },
     {
       "timestamp": "2025-09-10T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
