@@ -1,11 +1,11 @@
 {
   "count": 116,
-  "uniques": 63,
+  "uniques": 64,
   "clones": [
     {
       "timestamp": "2025-08-28T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2025-08-29T00:00:00Z",
@@ -69,8 +69,8 @@
     },
     {
       "timestamp": "2025-09-10T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
